linked to css file in base html without hydration

--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link type="style" rel="stylesheet" href="/static/styles.css" />
+		<link type="style" rel="stylesheet" href="/styles.css" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
